# ci-fail

./: main.py  pyproject.toml
.github/workflows/: ci.yml
