[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppf"
description = "Pipeline fail."
authors = [{ name = "Jakob Wagner" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tabulate"
]
